--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
   text-align: center;
+  margin: 0 auto;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  /* height: 40vmin; */
   pointer-events: none;
 }
 
